2015-03-10 20:10  rsbivand

	* DESCRIPTION,
	  inst: tidy

2015-03-10 20:02  rsbivand

	* man/readRAST.Rd:
	  examples migrated to nc_basic

2015-03-10 19:50  rsbivand

	* man/execGRASS.Rd,
	  man/gmeta.Rd, man/readRAST.Rd, man/readVECT.Rd, man/rgrass.Rd:
	  examples migrated to nc_basic

2015-03-10 18:54  rsbivand

	* DESCRIPTION:
	  tidy

2015-03-10 14:21  rsbivand

	* R/bin_link.R,
	  man/execGRASS.Rd, man/initGRASS.Rd, man/readRAST.Rd,
	  man/readVECT.Rd, man/rgrass.Rd: examples migrated to nc_basic

2015-02-19 20:16  rsbivand

	* .,
	  DESCRIPTION, R/rgrass.R, R/spgrass.R, man/rgrass.Rd,
	  man/spgrass.Rd: change name to rgrass7

2015-01-31 13:36  rsbivand

	* tidy

2015-01-29 18:18  rsbivand

	* tidy

2015-01-29 13:21  rkrug

	* Introduced
	  several tryCatch() to delete files after error * based on
	  http://permalink.gmane.org/gmane.comp.gis.grass.stats/26

	  similar potential problems were identified and code encapsulated
	  in

	  tryCatch blocks.

2015-01-29 12:43  rkrug

	* Fixed
	  Bug http://permalink.gmane.org/gmane.comp.gis.grass.stats/26 *
	  temporary files were not deleted upon error.

	  Wrapped tryCatch block around code.

2015-01-28 14:16  rkrug

	* Added
	  blocing for spgrass6 and spgrass7 unless correct GRASS GIS
	  version used * spgrass6, spgrass: added two internal functions:



	  .grassVersion(): returns GRASS GIS version used



	  .compatibleGRASSVersion(gv=.grassVersion()): returns TRUE if
	  GRASS GIS version







	  is compatible, FALSE if not.	As an attribute, it returns an
	  error / status message which can be printed. * spgrass6/AAA.R,
	  spgrass7/AAA.R: added check for .compatibleGRASSVersion()
	  in .onAttach()



	  which raises error if GRASS GIS version is not compatible.
	  The result is that the



	  package can not be loaded in R when running in an incompatible
	  GRASS GIS version. * spgrass6/initGRASS.R, spgrass7/initGRASS.R:
	  added check for .compatibleGRASSVersion()


