@@ -1,13 +1,13 @@
 Package: rgrass7
-Version: 0.1-0
-Date: 2015-03-11
+Version: 0.1-1
+Date: 2015-06-18
 Title: Interface Between GRASS 7 Geographical Information System and R
 Authors@R: c(
 	person("Roger", "Bivand", role = c("cre", "aut"), email = "Roger.Bivand@nhh.no"),
 	person("Rainer", "Krug", role = "ctb", email="Rainer@krugs.de"),
-	person("Markus", "Neteler", role = "ctb"))
+	person("Markus", "Neteler", role = "ctb", email="neteler@osgeo.org"))
 Description: Interpreted interface between GRASS 7 geographical 
-    information system and R, based on starting R from within the GRASS 
+    information system and R, based on starting R from within the GRASS GIS
     environment, or running free-standing R in a temporary GRASS location;
     the package provides facilities for using all GRASS commands from the 
     R command line. This package may not be used for GRASS 6, for which
