@@ -1,3 +1,7 @@
+2015-03-10 20:10  neteler
+
+	* R/vect_link.R: fix for drivers other that ESRI Shapefile
+
 2015-03-10 20:10  rsbivand
 
 	* DESCRIPTION,
